[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sj-psql-db-tools"
version = "0.0.5"
description = "PostgresQL database tools for my projects"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["postgres", "psql", "db", "tools"]
license = { text = "MIT" }
authors = [
  { name = "Sanket Jain", email = "djsj37@gmail.com" },
]
dependencies = [
  "pg8000",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

